--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,8 @@ keras==3.8.0
 matplotlib==3.8.2
 seaborn==0.13.2
 astunparse==1.6.3
+requests==2.31.0
+statsmodels==0.14.0
+werkzeug==3.0.1
+gunicorn
 astor
